# github-flow-lab

./: .gitignore  CHANGELOG.md  CODEOWNERS  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/calculator/: __init__.py  __main__.py  operations.py
tests/: test_operations.py
